fix overflow bug in Rigging tableview due to incorrect max width calculation

--- a/src/main/resources/src/components/MainPage/Dispatcher/Rigging/Parts/Parts.scss
+++ b/src/main/resources/src/components/MainPage/Dispatcher/Rigging/Parts/Parts.scss
@@ -1,16 +1,10 @@
 @import "../../../../../variables.scss";
 
 .parts {
+    width: 100%;
     .main-window__header {
         padding-top: 5px;
-        width: calc(100% + 25px);
         margin-bottom: 0;
-    }
-    .searchbar {
-        width: calc(100% + 25px) !important;
-    }
-    .control-panel {
-        width: calc(100% + 25px);
     }
 
     @media (max-width: 768px) {
