--- a/src/main/resources/src/components/MainPage/Dispatcher/Rigging/Rigging.scss
+++ b/src/main/resources/src/components/MainPage/Dispatcher/Rigging/Rigging.scss
@@ -1,9 +1,11 @@
 @import "../../../../variables.scss";
 
 .rigging {
-  .main-window {
-    padding: 10px 0;
-  }
+  // width: 100%;
+  // .main-window {
+  //   width: 100%;
+  //   padding: 10px 0;
+  // }
 
   .main-window__header {
     &--hidden {
@@ -18,17 +20,15 @@
   }
 
   .main-window__content {
-    width: calc(100% - 25px);
-    // background-color: $primary-background-color;
-    // border-top-left-radius: 10px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    // margin-bottom: 20px;
-    padding: 5px 0;
-    z-index: 5;
-    transition: 0.2s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     padding-top: 0;
-    // box-shadow: 0 4px 4px rgba(0, 0, 0, 0.22), 0 0px 5px rgba(0, 0, 0, 0.24);
+    // width: calc(100% - 25px);
+    width: 100%;
+    // padding: 5px 0;
+    // z-index: 5;
+    // transition: 0.2s ease-in-out;
 
     .main-window {
       padding-top: 0;
