--- a/src/main/resources/src/components/MainPage/Dispatcher/Rigging/RiggingComponents/Forms/EditRig/EditRig.scss
+++ b/src/main/resources/src/components/MainPage/Dispatcher/Rigging/RiggingComponents/Forms/EditRig/EditRig.scss
@@ -1,5 +1,5 @@
 @import "../../../../../../../variables.scss";
 
 .edit-rig {
-  
+  width: 100%;
 }
