--- a/src/main/resources/src/components/MainPage/Dispatcher/Rigging/RiggingComponents/Forms/NewRig/NewRig.scss
+++ b/src/main/resources/src/components/MainPage/Dispatcher/Rigging/RiggingComponents/Forms/NewRig/NewRig.scss
@@ -1,5 +1,5 @@
 @import "../../../../../../../variables.scss";
 
 .new-rig {
-  
+  width: 100%;
 }
