--- a/src/main/resources/src/components/MainPage/Dispatcher/Rigging/RiggingComponents/TableView/TableView.scss
+++ b/src/main/resources/src/components/MainPage/Dispatcher/Rigging/RiggingComponents/TableView/TableView.scss
@@ -7,16 +7,19 @@
     --defect: #ebbdba;
     --production: #eaebde;
     min-width: 1000px;
-    width: calc(100% + 25px);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 
     .main-window {
         padding: 0;
         width: 100%;
         &__list {
-            width: 100%;
+            // width: 100%;
             &-item {
-                padding: 15px 25px;
-                border-bottom: 1px solid #bbb;
+                padding-top: 15px;
+                padding-bottom: 15px;
                 &--defect {
                     background-color: var(--defect);
                     &::before {
@@ -84,7 +87,7 @@
                         flex: 0 1 20%;
                     }
                     &:nth-child(3) {
-                        flex: 0 1 30%;
+                        flex: 0 1 20%;
                     }
                     &:nth-child(4) {
                         flex: 0 1 40%;
@@ -107,11 +110,23 @@
                 }
             }
             .main-window__list-options {
+                box-sizing: border-box;
+                justify-content: center;
+                font-size: 95%;
+                width: 100%;
                 .main-window__list {
+                    width: 100%;
+                    // display: flex;
+                    // flex-direction: column;
+                    // align-items: flex-start;
+
                     &-item {
                         padding-top: 0px;
                         padding-bottom: 0px;
                         min-height: 3.5rem;
+                        box-sizing: border-box;
+                        width: 100%;
+                        // justify-content: flex-start;
                         &--border-checked {
                             border-right: 1px solid #cccccc;
                         }
@@ -159,6 +174,7 @@
                             }
                             &:nth-child(2) {
                                 flex: 0 1 15%;
+                                max-width: 200px;
                             }
                             &:nth-child(3) {
                                 flex: 0 1 20%;
@@ -198,7 +214,9 @@
                             &:nth-child(n + 7),
                             &:nth-child(5) {
                                 flex: 0 1 10%;
-                                max-width: Max(10%, 200px);
+                                // max-width: Min(10%, 50px);
+                                max-width: 100px;
+                                max-width: 150px;
                                 box-sizing: border-box;
                             }
                         }
