--- a/src/main/resources/src/components/MainPage/Dispatcher/Rigging/Stamp/Stamp.scss
+++ b/src/main/resources/src/components/MainPage/Dispatcher/Rigging/Stamp/Stamp.scss
@@ -1,16 +1,20 @@
 @import "../../../../../variables.scss";
 
 .stamp {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     .main-window__header {
         padding-top: 5px;
-        width: calc(100% + 25px);
         margin-bottom: 0;
+        // width: calc(100% + 25px);
     }
     .searchbar {
-        width: calc(100% + 25px) !important;
+        // width: calc(100% + 25px) !important;
     }
     .control-panel {
-        width: calc(100% + 25px);
+        // width: calc(100% + 25px);
     }
 
     @media (max-width: 768px) {
